# FJ_stock

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
backend/: pyproject.toml
backend/src/marketdesk/: __init__.py  api.py  auth.py  config.py  models.py  services.py  store.py
backend/src/marketdesk/analysis/: __init__.py  events.py  holding.py  market.py  opportunities.py  sector.py  stock.py
backend/src/marketdesk/providers/: __init__.py  base.py  eastmoney.py  iwencai.py  public_market.py
backend/tests/: test_analysis.py  test_api.py  test_deploy_contract.py  test_eastmoney_provider.py  test_iwencai_provider.py  test_models.py  test_public_provider.py  test_store.py
deploy/: aster-market.service  deploy_public.sh  link-live-snapshot.sh  stock-ts.service
docs/: TODO.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: README.md  __init__.py  check_live_data.py  dev.sh  docs_file_center_app.py  eltdx_bridge.py  enrich_tdx_snapshot.py  import_mcp_market_intelligence.py  refresh_a_share_kline.py  refresh_tdx_snapshot.py  run_daily_analysis.py  run_daily_pipeline.py  run_daily_research.py  send_morning_report.py  send_user_morning_reports.py  setup.sh  start.sh  stop.sh  verify.sh
tests/: test_a_share_kline_refresh.py  test_agentic_stock_method.py  test_akshare_news_enhancements.py  test_analysis.py  test_announcements.py  test_auth.py  test_cli.py  test_config.py  test_config_doctor_cache.py  test_continuation.py  test_daily_artifacts.py  test_daily_decisions.py  test_daily_pipeline.py  test_daily_research.py  test_data_center_dossier.py  test_data_chain_validation.py  test_data_quality.py  test_data_sources_tdx_snapshot.py  test_deep_analysis.py  test_deep_cli_html.py  test_deploy_snapshot_link.py  test_docs_file_center_app.py  test_eltdx_bridge_snapshot.py  test_eltdx_provider.py  test_email_report_simplification.py  (+83 more)
(+350 files in other folders)
